--- a/identityAuthentication/Components/Layout/NavMenu.razor
+++ b/identityAuthentication/Components/Layout/NavMenu.razor
@@ -14,32 +14,36 @@
     <nav class="nav flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <i class="fa-solid fa-house me-2" aria-hidden="true"></i> Home
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/roles" Match="NavLinkMatch.All">
-                <i class="fa-solid fa-gauge-high"></i> Roles
+                <i class="fa-solid fa-user-shield me-2" aria-hidden="true"></i> Roles
             </NavLink>
         </div>
 
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/cadastroempresa" Match="NavLinkMatch.All">
+                <i class="fa-solid fa-building me-2" aria-hidden="true"></i> Empresas
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+                <i class="fa-solid fa-square-plus me-2" aria-hidden="true"></i> Counter
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <i class="fa-solid fa-cloud-sun me-2" aria-hidden="true"></i> Weather
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
-                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
+                <i class="fa-solid fa-lock me-2" aria-hidden="true"></i> Auth Required
             </NavLink>
         </div>
 
@@ -47,7 +51,7 @@
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Manage">
-                        <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
+                        <i class="fa-solid fa-user-gear me-2" aria-hidden="true"></i> @context.User.Identity?.Name
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
@@ -55,7 +59,7 @@
                         <AntiforgeryToken />
                         <input type="hidden" name="ReturnUrl" value="@currentUrl" />
                         <button type="submit" class="nav-link">
-                            <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
+                            <i class="fa-solid fa-right-from-bracket me-2" aria-hidden="true"></i> Logout
                         </button>
                     </form>
                 </div>
@@ -63,12 +67,12 @@
             <NotAuthorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Register">
-                        <span class="bi bi-person-nav-menu" aria-hidden="true"></span> Register
+                        <i class="fa-solid fa-user-plus me-2" aria-hidden="true"></i> Register
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Login">
-                        <span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
+                        <i class="fa-solid fa-right-to-bracket me-2" aria-hidden="true"></i> Login
                     </NavLink>
                 </div>
             </NotAuthorized>
@@ -96,4 +100,3 @@
         NavigationManager.LocationChanged -= OnLocationChanged;
     }
 }
-
