--- a/identityAuthentication/Components/Layout/NavMenu.razor
+++ b/identityAuthentication/Components/Layout/NavMenu.razor
@@ -29,6 +29,13 @@
                 <i class="fa-solid fa-building me-2" aria-hidden="true"></i> Empresas
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/cadastrosetor" Match="NavLinkMatch.All">
+                <i class="fa-solid fa-sitemap me-2" aria-hidden="true"></i> Setores
+            </NavLink>
+        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <i class="fa-solid fa-square-plus me-2" aria-hidden="true"></i> Counter
