--- a/identityAuthentication/Components/Layout/NavMenu.razor
+++ b/identityAuthentication/Components/Layout/NavMenu.razor
@@ -76,6 +76,13 @@
                                         <i class="fa-solid fa-user-shield me-2" aria-hidden="true"></i> Roles
                                     </NavLink>
                                 </div>
+
+                                <div class="nav-item px-3">
+                                    <NavLink class="nav-link" href="/colaboradores">
+                                        <i class="fa-solid fa-users-cog me-2" aria-hidden="true"></i> Colaboradores
+                                    </NavLink>
+                                </div>
+
                                 <div class="nav-item px-3">
                                     <NavLink class="nav-link" href="/cadastroempresa">
                                         <i class="fa-solid fa-building me-2" aria-hidden="true"></i> Empresas
