--- a/identityAuthentication/Components/Layout/NavMenu.razor
+++ b/identityAuthentication/Components/Layout/NavMenu.razor
@@ -76,13 +76,11 @@
                                         <i class="fa-solid fa-user-shield me-2" aria-hidden="true"></i> Roles
                                     </NavLink>
                                 </div>
-
                                 <div class="nav-item px-3">
                                     <NavLink class="nav-link" href="/colaboradores">
                                         <i class="fa-solid fa-users-cog me-2" aria-hidden="true"></i> Colaboradores
                                     </NavLink>
                                 </div>
-
                                 <div class="nav-item px-3">
                                     <NavLink class="nav-link" href="/cadastroempresa">
                                         <i class="fa-solid fa-building me-2" aria-hidden="true"></i> Empresas
@@ -127,7 +125,7 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <form action="Account/Logout" method="post">
+                    <form action="Account/Logout" method="post" @formname="LogoutForm">
                         <AntiforgeryToken />
                         <input type="hidden" name="ReturnUrl" value="@currentUrl" />
                         <button type="submit" class="nav-link">
